--- a/mine/picom.mine.conf
+++ b/mine/picom.mine.conf
@@ -62,11 +62,12 @@ shadow-offset-y = 1;
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "class_g ?= 'Dmenu'",
+  "name    *?= 'Notification'",
+  "class_g *?= 'Conky'",
+  "class_g *?= 'Notify-osd'",
+  "class_g *?= 'Cairo-clock'",
+  "class_g *?= 'Dmenu'",
+  "class_g *?= 'st' && !_NET_WM_STATE@:32a",
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
   "_GTK_FRAME_EXTENTS@:c",
   "override_redirect = 1 && !WM_CLASS@:s"  
@@ -121,7 +122,7 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.93;
+inactive-opacity = 0.5;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -143,7 +144,7 @@ active-opacity = 1.0
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+focus-exclude = [ "x = 0 && y = 0 && override_redirect = true && class_g = 'Cairo-clock'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -156,6 +157,19 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
+opacity-rule = [
+  "90:name    *?= 'Notification'",
+  "90:name    *?= 'VIM' && focused",
+  "90:name    *?= 'VIM' && !focused",
+  "90:name    *?= 'Typora'",
+  "90:name    *?= 'Spyder'",
+  "90:class_g *?= 'Conky'",
+  "90:class_g *?= 'Notify-osd'",
+  "90:class_g *?= 'Cairo-clock'",
+  "90:class_g *?= 'Dmenu'",
+  "95:class_g *?= 'st' && !_NET_WM_STATE@:32a",
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
 
 
 #################################
@@ -193,7 +207,6 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 # blur-kern = ''
 blur-kern = "3x3box";
-
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
@@ -422,7 +435,7 @@ wintypes:
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; };
   dnd = { shadow = false; };
-  popup_menu = { opacity = 0.8; };
-  dropdown_menu = { opacity = 0.8; };
-  fullscreen = { fade = true; shadow = false; opacity = 1;focus = true };
+  popup_menu = { opacity = 0.5; };
+  dropdown_menu = { opacity = 0.5; };
+  fullscreen = { fade = true; shadow = false; opacity = 0.75;focus = true };
 };
