--- a/myfast/picom.myfast.conf
+++ b/myfast/picom.myfast.conf
@@ -62,11 +62,12 @@ shadow-offset-y = 1;
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "class_g ?= 'Dmenu'",
+  "name    *?= 'Notification'",
+  "class_g *?= 'Conky'",
+  "class_g *?= 'Notify-osd'",
+  "class_g *?= 'Cairo-clock'",
+  "class_g *?= 'Dmenu'",
+  "class_g *?= 'st' && !_NET_WM_STATE@:32a",
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
   "_GTK_FRAME_EXTENTS@:c",
   "override_redirect = 1 && !WM_CLASS@:s"  
@@ -158,6 +159,19 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
+opacity-rule = [
+  "90:name    *?= 'Notification'",
+  "90:name    *?= 'VIM' && focused",
+  "90:name    *?= 'VIM' && !focused",
+  "90:name    *?= 'Typora'",
+  "90:name    *?= 'Spyder'",
+  "90:class_g *?= 'Conky'",
+  "90:class_g *?= 'Notify-osd'",
+  "90:class_g *?= 'Cairo-clock'",
+  "90:class_g *?= 'Dmenu'",
+  "95:class_g *?= 'st' && !_NET_WM_STATE@:32a",
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
 
 
 #################################
