--- a/mine/picom.mine.conf
+++ b/mine/picom.mine.conf
@@ -54,6 +54,7 @@ shadow-offset-y = 1;
 # instead.
 #
 # shadow-ignore-shaped = ''
+shadow-ignore-shaped = false
 
 # Specify a list of conditions of windows that should have no shadow.
 #
@@ -67,10 +68,13 @@ shadow-exclude = [
   "class_g *?= 'Notify-osd'",
   "class_g *?= 'Cairo-clock'",
   "class_g *?= 'Dmenu'",
+  "class_g *?= 'Dunst'",
+  "class_g *?= 'i3-frame'",
   "class_g *?= 'st' && !_NET_WM_STATE@:32a",
-  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
   "_GTK_FRAME_EXTENTS@:c",
-  "override_redirect = 1 && !WM_CLASS@:s"  
+  "override_redirect = 1 && !WM_CLASS@:s",  
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKEY'"
 ];
 
 # Specify a X geometry that describes the region in which shadow should not
@@ -79,9 +83,11 @@ shadow-exclude = [
 # for example, if the 10 pixels on the bottom of the screen should not have shadows painted on.
 #
 # shadow-exclude-reg = "" 
+shadow-exclude-reg = "x10+0+0"
 
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
 # xinerama-shadow-crop = false
+xinerama-shadow-crop = true
 
 
 #################################
@@ -104,6 +110,7 @@ fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
+fade-delta = 5
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
@@ -158,17 +165,24 @@ focus-exclude = [ "x = 0 && y = 0 && override_redirect = true && class_g = 'Cair
 #
 # opacity-rule = []
 opacity-rule = [
+  "60:name    *?= 'I3bar'",
   "90:name    *?= 'Notification'",
   "90:name    *?= 'VIM' && focused",
   "90:name    *?= 'VIM' && !focused",
   "90:name    *?= 'Typora'",
   "90:name    *?= 'Spyder'",
+  "90:name    *?= 'sudo'",
+  "90:name    *?= 'Panel'",
+  "95:name    *?= 'Code'",
+  "99:name    *?= 'Restart'",
+  "90:class_g *?= 'Code - Insiders'",
   "90:class_g *?= 'Conky'",
   "90:class_g *?= 'Notify-osd'",
   "90:class_g *?= 'Cairo-clock'",
   "90:class_g *?= 'Dmenu'",
   "95:class_g *?= 'st' && !_NET_WM_STATE@:32a",
-  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+  "95:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'"
 ];
 
 
