Remove partial shadow

--- a/mine/picom.mine.conf
+++ b/mine/picom.mine.conf
@@ -63,26 +63,46 @@ shadow-ignore-shaped = false
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name    *?= 'Notification'",
-  "name      = 'MPV'",
-  "name     *= 'Telegram'",
-  "name     *= 'picom'",
-  "name     *= 'firefox'",
-  "name      = 'polybar-main_eDP1'",
-  "name     *= 'pcmanfm'",
-  "name     *= 'feeluown'",
-  "name     *= 'VirtualBox Machine'",
-  "class_g *?= 'Conky'",
-  "class_g *?= 'Notify-osd'",
-  "class_g *?= 'Cairo-clock'",
-  "class_g *?= 'Dmenu'",
-  "class_g *?= 'Dunst'",
-  "class_g *?= 'i3-frame'",
-  "class_g *?= 'st' && !_NET_WM_STATE@:32a",
+  "name		*?=	'Notification'",
+  "name		*?=	'MPV'",
+  "name		*?=	'Telegram'",
+  "name		*?=	'picom'",
+  "name		*?=	'firefox'",
+  "name		*?=	'polybar-main_eDP1'",
+  "name		*?=	'pcmanfm'",
+  "name		*?=	'feeluown'",
+  "name		*?=	'VirtualBox Machine'",
+  "name		*?=	'virt-manager'",
+  "name		*?=	'rofi'",
+  "name		*?=	'Plank'",
+  "name		*?=	'Docky'",
+  "name		*?=	'Kupfer'",
+  "name		*?=	'fcitx'",
+  "name		*?=	'fcitx5'",
+  "name		*?=	'xfce4-notifyd'",
+  "name		*?=	'cpt_frame_window'",
+  "name		*?=	'VLC'",
+  "name		*?=	'compton'",
+  "name		*?=	'Chrome'",
+  "name		*?=	'Chromium'",
+  "name		*?=	'microsoft-edge'",
+  "name		*?=	'microsoft-edge-stable'",
+  "class_g	*?=	'Conky'",
+  "class_g	*?=	'Firefox' && argb",
+  "class_g	*?=	'Kupfer'",
+  "class_g	*?=	'Synapse'",
+  "class_g	*?=	'Notify-osd'",
+  "class_g	*?=	'Cairo-clock'",
+  "class_g	*?=	'Xfce4-notifyd'",
+  "class_g	*?=	'Xfce4-power-manager'",
+  "class_g	*?=	'Dmenu'",
+  "class_g	*?=	'Dunst'",
+  "class_g	*?=	'i3-frame'",
+  "class_g	*?=	'st' && !_NET_WM_STATE@:32a",
   "_GTK_FRAME_EXTENTS@:c",
-  "override_redirect = 1 && !WM_CLASS@:s",  
-  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKEY'"
+  "override_redirect	*=	1 && !WM_CLASS@:s",  
+  "_NET_WM_STATE@:32a	*=	'_NET_WM_STATE_HIDDEN'",
+  "_NET_WM_STATE@:32a	*=	'_NET_WM_STATE_STICKEY'"
 ];
 
 # Specify a X geometry that describes the region in which shadow should not
@@ -174,6 +194,8 @@ focus-exclude = [ "x = 0 && y = 0 && override_redirect = true && class_g = 'Cair
 # opacity-rule = []
 opacity-rule = [
   "60:name    *?= 'I3bar'",
+  "75:name    *?= 'fcitx'",
+  "75:name    *?= 'fcitx5'",
   "90:name    *?= 'Notification'",
   "90:name    *?= 'VIM' && focused",
   "90:name    *?= 'VIM' && !focused",
@@ -183,16 +205,16 @@ opacity-rule = [
   "90:name    *?= 'Panel'",
   "95:name    *?= 'Code'",
   "99:name    *?= 'Restart'",
-  "80:class_g   = 'URxvt'",
+  "80:class_g *?= 'URxvt'",
   "80:class_g *?= 'rofi'",
-  "80:class_g   = 'Alacritty'",
-  "90:class_g   = 'Tilda'",
+  "80:class_g *?= 'Alacritty'",
+  "90:class_g *?= 'Tilda'",
   "90:class_g *?= 'Code - Insiders'",
   "90:class_g *?= 'Conky'",
   "90:class_g *?= 'Notify-osd'",
   "90:class_g *?= 'Cairo-clock'",
   "90:class_g *?= 'Dmenu'",
-  "95:class_g   = 'dunst'",
+  "95:class_g *?= 'dunst'",
   "95:class_g *?= 'st' && !_NET_WM_STATE@:32a",
   "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
   "95:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'"
