Adjust software transparency

--- a/mine/picom.mine.conf
+++ b/mine/picom.mine.conf
@@ -193,31 +193,43 @@ focus-exclude = [ "x = 0 && y = 0 && override_redirect = true && class_g = 'Cair
 #
 # opacity-rule = []
 opacity-rule = [
-  "60:name    *?= 'I3bar'",
-  "75:name    *?= 'fcitx'",
-  "75:name    *?= 'fcitx5'",
-  "90:name    *?= 'Notification'",
-  "90:name    *?= 'VIM' && focused",
-  "90:name    *?= 'VIM' && !focused",
-  "90:name    *?= 'Typora'",
-  "90:name    *?= 'Spyder'",
-  "90:name    *?= 'sudo'",
-  "90:name    *?= 'Panel'",
-  "95:name    *?= 'Code'",
-  "99:name    *?= 'Restart'",
-  "80:class_g *?= 'URxvt'",
-  "80:class_g *?= 'rofi'",
-  "80:class_g *?= 'Alacritty'",
-  "90:class_g *?= 'Tilda'",
-  "90:class_g *?= 'Code - Insiders'",
-  "90:class_g *?= 'Conky'",
-  "90:class_g *?= 'Notify-osd'",
-  "90:class_g *?= 'Cairo-clock'",
-  "90:class_g *?= 'Dmenu'",
-  "95:class_g *?= 'dunst'",
-  "95:class_g *?= 'st' && !_NET_WM_STATE@:32a",
-  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-  "95:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'"
+  "60:name	*?=	'I3bar'",
+  "75:name	*?=	'fcitx'",
+  "75:name	*?=	'fcitx5'",
+  "90:name	*?=	'Notification'",
+  "90:name	*?=	'VIM' && focused",
+  "90:name	*?=	'VIM' && !focused",
+  "90:name	*?=	'Typora'",
+  "90:name	*?=	'Spyder'",
+  "90:name	*?=	'sudo'",
+  "90:name	*?=	'Panel'",
+  "95:name	*?=	'Code'",
+  "99:name	*?=	'Restart'",
+  "90:name	*?=	'xpad'",
+  "90:name	*?=	'leafpad'",
+  "90:name	*?=	'featherpad'",
+  "90:name	*?=	'mousepad'",
+  "90:name	*?=	'deepin-editor'",
+  "90:name	*?=	'Chrome'",
+  "90:name	*?=	'Chromium'",
+  "90:name	*?=	'microsoft-edge'",
+  "90:name	*?=	'microsoft-edge-stable'",
+  "80:class_g	*?=	'URxvt'",
+  "80:class_g	*?=	'rofi'",
+  "80:class_g	*?=	'Alacritty'",
+  "85:class_g	*?=	'xterm'",
+  "85:class_g	*?=	'kitty'",
+  "90:class_g	*?=	'Tilda'",
+  "90:class_g	*?=	'Code - Insiders'",
+  "90:class_g	*?=	'Conky'",
+  "90:class_g	*?=	'Notify-osd'",
+  "90:class_g	*?=	'Cairo-clock'",
+  "90:class_g	*?=	'Dmenu'",
+  "90:class_g	*?=	'Firefox' && argb",
+  "95:class_g	*?=	'dunst'",
+  "95:class_g	*?=	'st' && !_NET_WM_STATE@:32a",
+  "0:_NET_WM_STATE@:32a	*=	'_NET_WM_STATE_HIDDEN'",
+  "95:_NET_WM_STATE@:32a *=	'_NET_WM_STATE_STICKY'"
 ];
 
 
