--- a/mine/picom.mine.conf
+++ b/mine/picom.mine.conf
@@ -63,44 +63,44 @@ shadow-ignore-shaped = false
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name		*?=	'Notification'",
+  "name		*?=	'VLC'",
   "name		*?=	'MPV'",
-  "name		*?=	'Telegram'",
-  "name		*?=	'picom'",
-  "name		*?=	'firefox'",
-  "name		*?=	'polybar-main_eDP1'",
-  "name		*?=	'pcmanfm'",
-  "name		*?=	'feeluown'",
-  "name		*?=	'VirtualBox Machine'",
-  "name		*?=	'virt-manager'",
   "name		*?=	'rofi'",
+  "name		*?=	'picom'",
   "name		*?=	'Plank'",
   "name		*?=	'Docky'",
-  "name		*?=	'Kupfer'",
   "name		*?=	'fcitx'",
   "name		*?=	'fcitx5'",
-  "name		*?=	'xfce4-notifyd'",
-  "name		*?=	'cpt_frame_window'",
-  "name		*?=	'VLC'",
-  "name		*?=	'compton'",
   "name		*?=	'Chrome'",
+  "name		*?=	'Kupfer'",
+  "name		*?=	'compton'",
+  "name		*?=	'firefox'",
+  "name		*?=	'pcmanfm'",
+  "name		*?=	'Telegram'",
+  "name		*?=	'feeluown'",
   "name		*?=	'Chromium'",
+  "name		*?=	'Notification'",
+  "name		*?=	'virt-manager'",
+  "name		*?=	'xfce4-notifyd'",
   "name		*?=	'microsoft-edge'",
+  "name		*?=	'cpt_frame_window'",
+  "name		*?=	'polybar-main_eDP1'",
+  "name		*?=	'VirtualBox Machine'",
   "name		*?=	'microsoft-edge-stable'",
+  "class_g	*?=	'Dmenu'",
+  "class_g	*?=	'Dunst'",
   "class_g	*?=	'Conky'",
-  "class_g	*?=	'Firefox' && argb",
   "class_g	*?=	'Kupfer'",
   "class_g	*?=	'Synapse'",
+  "class_g	*?=	'i3-frame'",
   "class_g	*?=	'Notify-osd'",
   "class_g	*?=	'Cairo-clock'",
   "class_g	*?=	'Xfce4-notifyd'",
+  "class_g	*?=	'Firefox' && argb",
   "class_g	*?=	'Xfce4-power-manager'",
-  "class_g	*?=	'Dmenu'",
-  "class_g	*?=	'Dunst'",
-  "class_g	*?=	'i3-frame'",
   "class_g	*?=	'st' && !_NET_WM_STATE@:32a",
   "_GTK_FRAME_EXTENTS@:c",
-  "override_redirect	=	1 && !WM_CLASS@:s",  
+  "override_redirect	=	1 && !WM_CLASS@:s",
   "_NET_WM_STATE@:32a	*=	'_NET_WM_STATE_HIDDEN'",
   "_NET_WM_STATE@:32a	*=	'_NET_WM_STATE_STICKEY'"
 ];
@@ -196,42 +196,47 @@ opacity-rule = [
   "60:name	*?=	'I3bar'",
   "75:name	*?=	'fcitx'",
   "75:name	*?=	'fcitx5'",
-  "90:name	*?=	'Notification'",
-  "90:name	*?=	'VIM' && focused",
-  "90:name	*?=	'VIM' && !focused",
+  "80:name	*?=	'nm-applet'",
+  "80:name	*?=	'volumeicon'",
+  "80:name	*?=	'volumeicon-alsa'",
+  "80:name	*?=	'touchpad-indicator'",
+  "90:name	*?=	'sudo'",
+  "90:name	*?=	'xpad'",
+  "90:name	*?=	'gdebi'",
+  "90:name	*?=	'Panel'",
   "90:name	*?=	'Typora'",
   "90:name	*?=	'Spyder'",
-  "90:name	*?=	'sudo'",
-  "90:name	*?=	'Panel'",
+  "90:name	*?=	'Chrome'",
+  "90:name	*?=	'leafpad'",
+  "90:name	*?=	'Chromium'",
+  "90:name	*?=	'mousepad'",
+  "90:name	*?=	'featherpad'",
+  "90:name	*?=	'Notification'",
+  "90:name	*?=	'deepin-editor'",
+  "90:name	*?=	'microsoft-edge'",
+  "90:name	*?=	'VIM' && focused",
+  "90:name	*?=	'VIM' && !focused",
+  "90:name	*?=	'microsoft-edge-stable'",
   "95:name	*?=	'Code'",
   "99:name	*?=	'Restart'",
-  "90:name	*?=	'xpad'",
-  "90:name	*?=	'leafpad'",
-  "90:name	*?=	'featherpad'",
-  "90:name	*?=	'mousepad'",
-  "90:name	*?=	'deepin-editor'",
-  "90:name	*?=	'Chrome'",
-  "90:name	*?=	'Chromium'",
-  "90:name	*?=	'microsoft-edge'",
-  "90:name	*?=	'microsoft-edge-stable'",
-  "80:class_g	*?=	'URxvt'",
   "80:class_g	*?=	'rofi'",
+  "80:class_g	*?=	'dunst'",
+  "80:class_g	*?=	'URxvt'",
   "80:class_g	*?=	'Alacritty'",
   "85:class_g	*?=	'xterm'",
   "85:class_g	*?=	'kitty'",
+  "85:class_g	*?=	'sakura'",
   "90:class_g	*?=	'Tilda'",
-  "90:class_g	*?=	'Code - Insiders'",
   "90:class_g	*?=	'Conky'",
+  "90:class_g	*?=	'Dmenu'",
   "90:class_g	*?=	'Notify-osd'",
   "90:class_g	*?=	'Cairo-clock'",
-  "90:class_g	*?=	'Dmenu'",
+  "90:class_g	*?=	'Code - Insiders'",
   "90:class_g	*?=	'Firefox' && argb",
-  "95:class_g	*?=	'dunst'",
   "95:class_g	*?=	'st' && !_NET_WM_STATE@:32a",
   "0:_NET_WM_STATE@:32a	*=	'_NET_WM_STATE_HIDDEN'",
   "95:_NET_WM_STATE@:32a *=	'_NET_WM_STATE_STICKY'"
 ];
-
 
 #################################
 #     Background-Blurring       #
